# parselmouth

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  docker-compose.yml  pyproject.toml  relations-pivot-plan.md  renovate.json  yank.yaml
.github/: dependabot.yml
.github/workflows/: README.md  deploy-frontend.yml  dumper.yml  dynamic.yml  enforce-sha.yaml  mapper.yml  pre-commit.yml  run_tests.yml  update_bioconda.yml  update_channel_v0_v1.yml  update_pytorch.yml  update_pytorch_with_relations.yml  updater.yml  updater_conda_forge.yml  updater_conda_forge_with_relations.yml  updater_tango_controls.yml
docs/: LOCAL_TESTING.md
files/: compressed_mapping.json  mapping_as_grayskull.json  non_existing_pypi_packages.json  non_pypi_names.json
files/v0/: compressed_mapping.json
files/v0/bioconda/: compressed_mapping.json
files/v0/conda-forge/: compressed_mapping.json
files/v0/pytorch/: compressed_mapping.json
files/v0/tango-controls/: compressed_mapping.json
frontend/: .env.development  .env.production  .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChannelPopover.tsx  HowItWorks.tsx  Logos.tsx  MappingDetail.tsx  PackageWaffle.tsx  PixiMappingBuilder.tsx  SearchPalette.tsx  VersionHistory.tsx
frontend/src/lib/: api.ts  names.ts  pixiMappingCart.ts  pypi.ts  urls.ts  utils.ts
scripts/: test_pipeline_local.py  test_v1_mapping.py
src/parselmouth/: channels.py  conda_forge.py  dump.py  dump_producer.py  main.py  map_as_grayskull_transformer.py  mapping_transformer.py  merger.py  non_pypi_mapping.py  parselmouth.py  s3.py  subdir_producer.py  updater.py  updater_merger.py  updater_producer.py  utils.py
src/parselmouth/cli/: cli.py
src/parselmouth/explorer/: __init__.py  catalog.py  common.py  explore.py  http_client.py  index_cache.py  loader.py  renderers.py  selectors.py
src/parselmouth/internals/: artifact.py  channels.py  check_one.py  conda_forge.py  deleter.py  http_utils.py  index_cache.py  legacy_mapping.py  mapping_transformer.py  package_explorer.py  package_relations.py  pypi_mapping.py  relations_updater.py  remover.py  s3.py  schema.py  subdirs.py  types.py  update_one.py  updater.py  updater_merger.py  updater_producer.py  yank.py
tests/: conftests.py  demo_explorer.py  test_artifact.py  test_incremental_upload.py  test_integration_s3_pipeline.py  test_levenshtein.py  test_updater.py  test_updater_merger.py  test_updater_producer.py  test_v1_mapping.py  test_yank.py
tests/fixtures/: sample_repodata.json
