[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parselmouth"
version = "0.0.1"
authors = [
  { name="Nichita Morcotilo", email="nichita@prefix.dev" },
]
description = "Mapper of conda to pypi"
readme = "README.md"
requires-python = "==3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# These are pypi dependencies
dependencies = [
    # needs to be published
    "conda-oci-mirror @ git+https://github.com/channel-mirrors/conda-oci-mirror.git@25ea3e436f0b0bc5a9c646121efafc9c68e116cd",
    "conda-forge-metadata~=0.6.2",
]

[tool.pixi.project]
name = "parselmouth"
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
parselmouth = { path = ".", editable = true }

[tool.pixi.dependencies]
requests = ">=2.31.0,<2.32"
boto3 = ">=1.34,<1.35"
python-dotenv = ">=1.0.1,<1.1"
packaging = "*"

[tool.pixi.feature.test.dependencies]
pytest = "*"

[tool.pixi.feature.test.tasks]
run_tests = "pytest tests"


[tool.pixi.environments]
test = {features = ["test"], solve-group = "default"}
